--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
             Project 1: <a href="./Project_1_AmazonClone/index.html" target="_blank">Amazon Homepage UI Clone</a>
         </li>
         <li>
-            Project 1: <a href="./Project_2_NetflixClone/index.html" target="_blank">Netflix Homepage UI Clone</a>
+            Project 2: <a href="./Project_2_NetflixClone/index.html" target="_blank">Netflix Homepage UI Clone</a>
         </li>
         <li>
-            Project 1: <a href="./Project_3_SpotifyClone/index.html" target="_blank">Spotify UI Clone</a>
+            Project 3: <a href="./Project_3_SpotifyClone/index.html" target="_blank">Spotify UI Clone</a>
+        </li>
+        <li>
+            Project 4: <a href="https://shadabhasanhakimi.github.io/Tax-Calculator-Project/" target="_blank">Tax Calculator</a>
         </li>
     </ul>
 </body>
