Mini Project Added

--- a/index.html
+++ b/index.html
@@ -26,5 +26,10 @@
             Project 4: <a href="https://shadabhasanhakimi.github.io/Tax-Calculator-Project/" target="_blank">Tax Calculator</a>
         </li>
     </ul>
+
+    <h2>Mini Projects</h2>
+    <ul>
+        <li>Mini Project 1: <a href="./MiniProject_1_SimonSaysGame/index.html" target="_blank">Simon Says Game</a></li>
+    </ul>
 </body>
 </html>
