Sales Queen assignment uploaded

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <h2>Mini Projects</h2>
     <ul>
-        <li>Mini Project 1: <a href="./MiniProject_1_SimonSaysGame/index.html" target="_blank">Simon Says Game</a></li>
+        <li>Simon Says Game: <a href="./MiniProject_1_SimonSaysGame/index.html" target="_blank">Simon Says Game</a></li>
     </ul>
 </body>
 </html>
